--- a/style.css
+++ b/style.css
@@ -11,37 +11,45 @@
  Tags:         responsive
  Text Domain:  wordpress-bootstrap-child
 */
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Fjalla+One);
+@import url(http://fonts.googleapis.com/css?family=Fjalla+One);
+@font-face {
+	font-family: 'Domaine';
+	src: url('fonts/DomaineDisp-Semibold.eot');
+	src: local('☺'), url('fonts/DomaineDisp-Semibold.woff') format('woff'), url('fonts/DomaineDisp-Semibold.ttf') format('truetype'), url('fonts/DomaineDisp-Semibold.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
 
 body {
-    font-family: 'Roboto Slab', serif;
+    font-family: 'Domaine', serif;
     padding-top:40px;
     }
 
 .navbar-brand {
     font-family: 'Fjalla One', sans-serif;
     font-size: 1.4em;
-    text-transform: uppercase;
 }
 .home-banner {
-    background-image:url('http://www.lorempixum.com/400/100');
+    background-image:url('banner.jpg');
     background-position: top;
     background-clip: border-box;
     background-size: cover;
     height:360px;
-    font-family: 'Fjalla One', sans-serif;
+    font-family: 'Domaine', sans-serif;
     text-shadow: 1px 1px 0px rgba(150, 150, 150, 1);
     background-attachment: fixed;
 }
-.home-banner h1{font-size:6em;color:white;margin:0px;text-transform: uppercase;z-index: 1;position:absolute;top:100px}
+.home-banner h1{font-size:6em;color:white;margin:0px;z-index: 1;position:absolute;top:100px}
 .home-banner h2{font-size:2em;color:white;z-index: 1;position:absolute;top:200px}
 .dimmer {width:100%;height:100%;background-color: black;opacity: 0.5;z-index: 0;}
 
 .home #main article {background-color: #e7e7e7;}
 .home #main article footer, .home #main article header {padding:10px;}
-.home-grid .featured-post {background-size: cover;width:100%;height:200px;display:block;}
+.home-grid .featured-post {background-color: black; background-size: cover;width:100%;height:200px;display:block;}
 .home .page-header {margin:0;padding:10px;}
 .home h2 {font-size:1.4em;}
+#main p.meta {font-style: normal;font-family: arial; font-size: .6em;}
 
 .post header{clear:both;}
 .page-header{border:0px;margin-bottom:0;padding-bottom:0;}
@@ -55,4 +63,4 @@ ul .post-categories {height: 1em;}
 .h2 {font-family: 'Fjalla One', sans-serif;text-transform: uppercase;}
 
 /* Structure */
-hr {clear:both;}
+hr {clear:both;border-top: 2px solid black;}
